welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:25: error: too many arguments for method growFlowers: ()Unit
growFlowers(1,6); Fleur(Color.blue); growFlowers(9,6); growFlowers(1,14);  Fleur(Color.blue); growFlowers(9,14)
           ^FlowerCase:25: error: too many arguments for method growFlowers: ()Unit
growFlowers(1,6); Fleur(Color.blue); growFlowers(9,6); growFlowers(1,14);  Fleur(Color.blue); growFlowers(9,14)
                                                ^FlowerCase:25: error: too many arguments for method growFlowers: ()Unit
growFlowers(1,6); Fleur(Color.blue); growFlowers(9,6); growFlowers(1,14);  Fleur(Color.blue); growFlowers(9,14)
                                                                  ^FlowerCase:25: error: too many arguments for method growFlowers: ()Unit
growFlowers(1,6); Fleur(Color.blue); growFlowers(9,6); growFlowers(1,14);  Fleur(Color.blue); growFlowers(9,14)
                                                                                                         ^FlowerCase:28: error: java.awt.Color does not take parameters
  growFlowers(); avance(3); Fleur(Color.blue()); avance(); gauche(); avance(2); droite(); growFlowers(); while (!estDosMur) {recule()}}
                                            ^FlowerCase:30: error: not found: value doite
grosPot(); gauche(); recule(); droite(); while (!estDosMur) {recule()}; droite(); doite(); avance(4); gauche(); grosPot() 
                                                                                  ^